# proto-to-mcp

./: .cursorindexingignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  development_plan.md  pyproject.toml  setup.py
.cursor/rules/: derived-cursor-rules.mdc
.github/workflows/: ci.yml  publish.yml
.specstory/ai_rules_backups/: derived-cursor-rules.mdc.2025-04-30T23-28-26-517Z
docs/: api-reference.md  getting-started.md  index.md
examples/advanced/: Makefile  advanced.proto  advanced_mcp_server.py  generate_server.py  pyproject.toml
examples/simple/: Makefile  README.md  generate_server.py  pyproject.toml  simple.proto  simple_mcp_server.py
src/proto_to_mcp/: __init__.py  cli.py  converter.py  generator.py  grpc_client.py  parser.py
tests/: test_converter.py  test_generator.py  test_parser.py
tests/fixtures/: test_service.proto
