[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-to-mcp"
version = "0.1.0"
description = "Convert Protocol Buffer (Protobuf) schema files to Model Context Protocol (MCP) servers"
readme = "README.md"
authors = [
    {name = "Minoru Mizutani", email = "minoru.mizutani@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.2.6",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "protobuf>=5.29.4",
    "types-protobuf"
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "twine>=6.1.0",
    "build>=1.2.2",
    "uv>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/mmizutani/proto-to-mcp"
"Bug Tracker" = "https://github.com/mmizutani/proto-to-mcp/issues"
"Documentation" = "https://github.com/mmizutani/proto-to-mcp/docs"

[project.scripts]
proto-to-mcp = "proto_to_mcp.cli:main"

[tool.ruff]
line-length = 120
target-version = "py313"
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), isort (`I`), and other linters
select = ["E", "F", "I", "W", "N", "B", "PYI", "UP", "D", "RUF"]
ignore = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["proto_to_mcp"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
