[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-to-mcp"
version = "0.1.0"
description = "Convert Protocol Buffer (Protobuf) schema files to Model Context Protocol (MCP) servers"
readme = "README.md"
authors = [
    {name = "Minoru Mizutani", email = "minoru.mizutani@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.2.6",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "protobuf>=5.29.4",
    "types-protobuf>=5.29.1.20250403",
]
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    ".",
    "examples/simple",
    # "examples/complex",
]

# This is needed to allow the examples to import the main package via the workspace mechanism.
[tool.uv.sources]
main-package = { workspace = true }

[project.optional-dependencies]
dev = []

[project.urls]
"Homepage" = "https://github.com/mmizutani/proto-to-mcp"
"Bug Tracker" = "https://github.com/mmizutani/proto-to-mcp/issues"
"Documentation" = "https://github.com/mmizutani/proto-to-mcp/docs"

[project.scripts]
proto-to-mcp = "proto_to_mcp.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), isort (`I`), and other linters
select = ["E", "F", "I", "W", "N", "B", "PYI", "UP", "D", "RUF"]
ignore = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["proto_to_mcp"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.5.0",
    "pyright>=1.1.400",
    "twine>=6.1.0",
    "build>=1.2.2",
    "uv>=0.1.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", ".git", "dist"]
pythonVersion = "3.10"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
