[project]
name = "advanced"
version = "0.1.0"
description = "Advanced example of using proto-to-mcp to generate an MCP server from a Protobuf schema."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.2.6",
    "proto-to-mcp",
]

[tool.uv.sources]
proto-to-mcp = { workspace = true }

[tool.setuptools]
py-modules = ["advanced_mcp_server"]

[project.scripts]
server = "advanced_mcp_server:main"
